--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -6,8 +6,8 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    align-items: flex-start;
     justify-content: center;
     height: 100vh;
 }
@@ -19,9 +19,23 @@ body {
     border-radius: 10px;
     background-color: #444;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 20px;
 }
 
-h2 {
+.history-container {
+    padding: 20px;
+    border: 1px solid #444;
+    border-radius: 10px;
+    background-color: #444;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    width: 200px;
+    overflow-y: auto;
+    max-height: calc(100vh - 40px);
+}
+
+h2,
+h3 {
     color: #ff4444;
 }
 
@@ -51,6 +65,11 @@ button:hover {
     background-color: #ff6666;
 }
 
+button.added {
+    background-color: #66bb66;
+    color: #fff;
+}
+
 img {
     max-width: 300px;
     margin: 20px 0;
@@ -70,4 +89,16 @@ img {
 
 .notification.show {
     opacity: 1;
+}
+
+.history-track {
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.history-track img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    vertical-align: middle;
 }
